kubernetes/apps/default/karakeep/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: karakeep-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: karakeep
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ai
            app.kubernetes.io/name: bifrost
